--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-<h1> Welcome to my web site.</h1>
-
+<app-header></app-header>
+<app-body></app-body>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
