--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,35 +1,35 @@
 <div class="container mx-auto p-3">
     <div class="row mb-3">
-        <div class="col-sm-6 message">
+        <div class="col-6 message">
             Looing for help in turning your idea into reality?
         </div>
-        <div class="col-sm-6">
-            <img class="image-brain" src="../../../assets/images/brain.png">
+        <div class="col-6">
+            <img src="../../../assets/images/brain.png" alt="idea">
         </div>
 
     </div>
 
     <div class="row mb-3">
-        <div class="col-sm-6">
-            <img class="image-browser" src="../../../assets/images/browser.png">
+        <div class="col-6">
+            <img src="../../../assets/images/browser.png" alt="webapp">
         </div>
-        <div class="col-sm-6 message">
+        <div class="col-6 message">
             Remember me if you need help in developing web application.
         </div>
     </div>
     <div class="row mb-3">
-        <div class="col-sm-6 message">
+        <div class="col-6 message">
             Need a mobile app?
         </div>
-        <div class="col-sm-6">
-            <img class="image-brain" src="../../../assets/images/mobile.png">
+        <div class="col-6">
+            <img src="../../../assets/images/mobile.png" alt="mobileapp">
         </div>
     </div>
     <div class="row mb-3">
-        <div class="col-sm-6">
-            <img class="image-browser" src="../../../assets/images/binary.jpg">
+        <div class="col-6">
+            <img src="../../../assets/images/binary.jpg" alt="coding">
         </div>
-        <div class="col-sm-6 message">
+        <div class="col-6 message">
             Also, I can help you learn coding. Java, Python, TypeScript, JavaScript, HTML, CSS, and SQL.
         </div>
     </div>
