--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,6 +7,17 @@
     font-family: Arial, sans-serif;
 }
 
+@media only screen and (max-width: 600px) {
+  .header{
+    background-color: rgb(36,107,190);
+    width: 100%;
+    height: auto;
+    margin: 0;
+    color: #fff;
+    font-family: Arial, sans-serif;
+  }
+}
+
 .introduction{
     font-family: 'Brush Script MT', cursive;
     font-size: 50px;
