header image borken fixed

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
                 </p>
             </div>
             <div class="col-sm-6">
-                <img src="../../../assets/images/idea-icon.png" alt="">
+                <img src="../../../assets/images/idea-icon.png" alt="idea">
             </div>
         </div>
     </div>
