--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,36 +1,45 @@
 <div class="container mx-auto p-3">
-    <div class="row mb-3">
-        <div class="col-6 message">
-            Looing for help in turning your idea into reality?
+    <section id="idea">
+        <div class="row mb-3">
+            <div class="col-6 message">
+                Looing for help in turning your idea into reality?
+            </div>
+            <div class="col-6">
+                <img src="../../../assets/images/brain.png" alt="idea">
+            </div>
+    
         </div>
-        <div class="col-6">
-            <img src="../../../assets/images/brain.png" alt="idea">
+    </section>
+    <section id="web">
+        <div class="row mb-3">
+            <div class="col-6">
+                <img src="../../../assets/images/browser.png" alt="webapp">
+            </div>
+            <div class="col-6 message">
+                Remember me if you need help in developing web application.
+            </div>
         </div>
+    </section>
 
-    </div>
+    <section id="mobile">
+        <div class="row mb-3">
+            <div class="col-6 message">
+                Need a mobile app?
+            </div>
+            <div class="col-6">
+                <img src="../../../assets/images/mobile.png" alt="mobileapp">
+            </div>
+        </div>
+    </section>
 
-    <div class="row mb-3">
-        <div class="col-6">
-            <img src="../../../assets/images/browser.png" alt="webapp">
+    <section id="coding">
+        <div class="row mb-3">
+            <div class="col-6">
+                <img src="../../../assets/images/coding.png" alt="coding">
+            </div>
+            <div class="col-6 message">
+                Also, I can help you learn coding. Java, Python, TypeScript, JavaScript, HTML, CSS, and SQL.
+            </div>
         </div>
-        <div class="col-6 message">
-            Remember me if you need help in developing web application.
-        </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col-6 message">
-            Need a mobile app?
-        </div>
-        <div class="col-6">
-            <img src="../../../assets/images/mobile.png" alt="mobileapp">
-        </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col-6">
-            <img src="../../../assets/images/binary.jpg" alt="coding">
-        </div>
-        <div class="col-6 message">
-            Also, I can help you learn coding. Java, Python, TypeScript, JavaScript, HTML, CSS, and SQL.
-        </div>
-    </div>
+    </section>
 </div>
