--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,31 +1,29 @@
 <div class="footer">
     <div class="container mx-auto mt-4 mb-2">
         <div class="row">
-            <div class="col-6">
+            <div class="col-sm-4 mb-5">
                 <h3>Tek Bista</h3>
-                <p>Software Engineer / Developer</p>
-                <div>
-                    <i class="bi bi-telephone-fill">(513)250-0423</i> 
-                </div>
-                <div>
-                    <i class="bi bi-envelope-fill">tekbista375@gmail.com</i>
-                </div>
-                
+                <p>Software Engineer</p>
+                <p>Tata Consultancy Services</p>
+                <div><i class="bi bi-envelope-fill">tekbista375@gmail.com</i></div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-4 mb-5">
+                <div class="d-flex justify-content-center"><h3>Follow Me</h3></div>
+                <div class="d-flex justify-content-center">
+                    <i class="bi bi-linkedin social" (click)="findMe('linkedin')"></i>
+                    <i class="bi bi-facebook social" (click)="findMe('facebook')"></i>
+                    <i class="bi bi-youtube social" (click)="findMe('youtube')"></i>
+                    <i class="bi bi-instagram social" (click)="findMe('instagram')"></i>
+                </div>
+            </div>
+            <div class="col-sm-4 mb-5">
                 <h3>Services</h3>
                 <p>Web development</p>
                 <p>Mobile app developemnt</p>
                 <p>Programming class</p>
-            </div>
-            
+            </div> 
         </div>
-        <div class="d-flex justify-content-center mt-3 mb-3">
-            <i class="bi bi-linkedin social" (click)="findMe('linkedin')"></i>
-            <i class="bi bi-facebook social" (click)="findMe('facebook')"></i>
-            <i class="bi bi-twitter social" (click)="findMe('twitter')"></i>
-            <i class="bi bi-instagram social" (click)="findMe('instagram')"></i>
-        </div>
+       
         <div class="d-flex justify-content-center mt-4">
             <p>&copy; {{curYear}} Tek Bista | All rights reserved.</p>
         </div>
