--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,4 +1,5 @@
-.header{
+
+  .header{
     background-image: url("../../../assets/images/banner.png");
     width: 100%;
     height: 664px;
@@ -7,7 +8,7 @@
     font-family: Arial, sans-serif;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .header{
     background-color: rgb(36,107,190);
     width: 100%;
@@ -16,14 +17,47 @@
     color: #fff;
     font-family: Arial, sans-serif;
   }
+
+  
 }
 
-.introduction{
+.typing{
+    display: inline-block;
+}
+
+/* .typing-text{
     font-family: 'Brush Script MT', cursive;
     font-size: 50px;
+    padding: 0px;
+    display: inline-block;
+    overflow: hidden;
+    box-sizing: border-box;
     background: -webkit-linear-gradient(#fff, rgb(67, 244, 2));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    border-right: 2px solid #fff;
+    animation: typing 5s steps(32, end), blink 0.1s step-end infinite;
+    animation-iteration-count: infinite;
+  } */
+
+  .typing-text{
+    font-family: Arial, sans-serif;
+    display: inline-block;
+    overflow: hidden;
+    box-sizing: border-box;
+    white-space: nowrap;
+    font-size: 50px;
+    border-right: 2px solid #fff;
+    animation: typing 5s steps(34, end) infinite alternate, blink 0.25s step-end  infinite;
+    background: -webkit-linear-gradient(#fff, rgb(67, 244, 2));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  @media only screen and (max-width: 900px){
+    .typing-text{
+      font-size: 30px;
+    }
   }
 
   p{
@@ -33,4 +67,25 @@
 
   img{
     width: 100%;
+  }
+
+
+  @keyframes typing {
+    from{
+      width: 0%;
+    }
+    to{
+      width: 100%;
+    }
+    
+  }
+
+
+  @keyframes blink {
+    from,to{
+      border-color: transparent;
+    }
+    50%{
+      border-color: #fff;
+    }
   }
