--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,26 @@
-<div class="header">
-    <div class="container mx-auto pt-5">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="introduction">Hi, I'm Tek.</div> 
-                <div class="introduction">A Software Engineer.</div>
-                <p>
-                    Highly experienced, solution-oriented professional with experience in full-stack software development using java,   
-                    Spring boot, Angular, and Bootstrap. Proficient in utilizing a wide variety of programs and tools to provide 
-                    high-quality and cost-effective applications / systems to boost organizational productivity.
-                </p>
-            </div>
-            <div class="col-sm-6">
-                <img src="../../../assets/images/idea-icon.png" alt="idea">
+<section id="home">
+    <div class="header">
+        <div class="container mx-auto pt-3">
+            <app-navbar></app-navbar>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="typing" >
+                        <div class="typing-text">
+                            Hi, I'm Tek. A Software Engineer.
+                        </div>
+                    </div> 
+                    
+                    <p>
+                        Highly experienced, solution-oriented professional with experience in full-stack software development using java,   
+                        Spring boot, Angular, and Bootstrap. Proficient in utilizing a wide variety of programs and tools to provide 
+                        high-quality and cost-effective applications / systems to boost organizational productivity.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="../../../assets/images/programming.png" alt="idea">
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+
