--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <h3>Tek Bista</h3>
                 <p>Software Engineer</p>
                 <p>Tata Consultancy Services</p>
-                <div><i class="bi bi-envelope-fill">tekbista375@gmail.com</i></div>
+                <div class="d-flex justify-content-center"><i class="bi bi-envelope-fill"></i><p>{{email}}</p></div>
             </div>
             <div class="col-sm-4 mb-5">
                 <div class="d-flex justify-content-center"><h3>Follow Me</h3></div>
@@ -13,19 +13,20 @@
                     <i class="bi bi-linkedin social" (click)="findMe('linkedin')"></i>
                     <i class="bi bi-facebook social" (click)="findMe('facebook')"></i>
                     <i class="bi bi-youtube social" (click)="findMe('youtube')"></i>
-                    <i class="bi bi-instagram social" (click)="findMe('instagram')"></i>
+                    <i class="bi bi-github social" (click)="findMe('github')"></i>
                 </div>
             </div>
             <div class="col-sm-4 mb-5">
                 <h3>Services</h3>
-                <p>Web development</p>
-                <p>Mobile app developemnt</p>
-                <p>Programming class</p>
+                <div *ngFor="let service of services">
+                    <p>{{service}}</p>
+                </div>
             </div> 
         </div>
        
         <div class="d-flex justify-content-center mt-4">
             <p>&copy; {{curYear}} Tek Bista | All rights reserved.</p>
+           
         </div>
     </div>
 </div>
