--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,21 +1,23 @@
 <div class="container mx-auto p-3" *ngFor="let section of sections; let i = index">
     <section id="{{section.title}}" class="mt-5 mb-5" *ngIf="(i + 1)%2 !== 0">
         <div class="row mb-3">
-            <div class="col-6 message">
-                {{section.content}}
+            <div class="col-sm-6">
+                <div class="mb-4 message">{{section.heading}} </div>
+                <p>{{section.content}}</p>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="{{section.image}}" alt="idea">
             </div>
         </div>
     </section>
     <section id="{{section.title}}" class="mt-5 mb-5" *ngIf="(i + 1)%2 === 0">
         <div class="row mb-3">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="{{section.image}}" alt="idea">
             </div>
-            <div class="col-6 message">
-                {{section.content}}
+            <div class="col-sm-6 ">
+                <div class="mb-4 message">{{section.heading}} </div> 
+                <p>{{section.content}}</p>   
             </div>
         </div>
     </section>
